# -The-Brain-Games-

./: .gitignore  Dockerfile  Makefile  README.md  cli.py  pyproject.toml
brain_games/: Engine.py  __init__.py  engine.py
brain_games/games/: Arithm_progression.py  Calc.py  Gcd.py  Is_even.py  Is_prime.py  arithm_progression.py  calc.py  gcd.py  is_even.py  is_prime.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
