[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["mikerockin <mrmikhail88@gmail.com>"]
packages = [
  { include = "brain_games" },

]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
asciinema = "^2.2.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prog = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.dev-dependencies]
flake8 = "^5.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
